--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Weather APP</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City Name", spellcheck="false">
-            <button><img src="search.png" ></button>
+            <button></img src="search.png" ></button>
         </div>
         <div class="error">
             <p>Invalid city name</p>
